--- a/pc/online-web/src/main/webapp/web/html/personal-center/personal-index.html
+++ b/pc/online-web/src/main/webapp/web/html/personal-center/personal-index.html
@@ -804,13 +804,26 @@
 								</div>
 								<!--<div class="hide">内容4-2</div>-->
 							</div>
+						<!--个人资料-->
 							<div class="content hide" >
 								<div>内容5-1</div>
 								<!--<div class="hide">内容4-2</div>-->
 							</div>
+						<!--消息-->
 							<div class="content hide" >
-								<div>内容6-1</div>
-								<!--<div class="hide">内容4-2</div>-->
+								<div class="news-wrap">
+									<p class="mune-news">我的消息</p>
+									<div class="main-news">
+										<button type="button">全部标记为已读</button>
+										<ul>
+											<li><span class="icon-tip"></span>恭喜您成功报名课程<a href="">小宝中医带你快速入门学针灸（一）</a></li>
+											<li></li>
+											<li></li>
+											<li></li>
+										</ul>
+									</div>
+								</div>
+								
 							</div>
 							<div class="content hide" >
 								<div>内容7-1</div>
