增加课程直播预告--直播间-主讲人为空的状态，h5和ios（文本域）做修改。

--- a/wechat/src/main/webapp/xcview/html/live_play.html
+++ b/wechat/src/main/webapp/xcview/html/live_play.html
@@ -35,6 +35,9 @@
 					{{if lineState == 1}}
 						<p>直播课程</p>
 					{{/if}}
+					{{if lineState == 2}}
+						<p>直播预告</p>
+					{{/if}}
 					{{if lineState == 4}}
 						<p>直播预告</p>
 					{{/if}}
@@ -142,6 +145,9 @@
 						<span>直播时间：{{startTime.slice(0,16)}}&nbsp;&nbsp;</span>
 						{{if lineState == 1}}
 						<p>直播中</p>
+						{{/if}}
+						{{if lineState == 2}}
+						<p style="width: 0.6rem;height: 0.32rem;font-size: 0.2rem;">预告</p>
 						{{/if}}
 						{{if lineState == 4}}
 						<p style="width: 0.6rem;height: 0.32rem;font-size: 0.2rem;">预告</p>
