--- a/wechat/src/main/webapp/xcview/html/person_fragment.html
+++ b/wechat/src/main/webapp/xcview/html/person_fragment.html
@@ -55,11 +55,12 @@
 		width: 100%;
 		height: 1rem;
 		line-height: 1rem;
-		text-align: center;
+		/*text-align: center;*/
 		font-size: 0.28rem;
 		display: none;
 		color: #bbb;
 		background: #fff;
+		text-indent: 0.6rem;
 	}
 </style>
 
@@ -70,7 +71,7 @@
 		<div class="user_mywrite" id="aaaaa"></div>	
 	</div>
 	<div class="no">暂无数据</div>
-	<div class="no_referral">暂无主讲人介绍</div>
+	<div class="no_referral" style="">暂无主讲人介绍</div>
 </div>
 <script src="/xcview/weihoujs/jquery.min.js"></script>
 <script type="text/javascript" src="/xcview/js/common/mui.min.js?v=11111111"></script>
