--- a/wechat/src/main/webapp/xcview/html/details.html
+++ b/wechat/src/main/webapp/xcview/html/details.html
@@ -509,7 +509,7 @@ $(function(){
 		</div>
 		<!--关注结束-->
 
-		<div class="null_anchor" style="font-size: 0.59rem;display: none;background: #fff;margin-top: 3.4rem;padding: 0.4rem 0;text-align: center;">暂无主讲人介绍</div>
+		<div class="null_anchor" style="font-size: 0.59rem;display: none;background: #fff;margin-top: 3.4rem;padding: 0.4rem 0;text-indent: 0.6rem;">暂无主讲人介绍</div>
 		<div class="anchor_center01" style="margin-top: 3.4rem;">
 			<div class="anchor_center">
 				
