--- a/pc/online-web/src/main/webapp/web/html/personal-center/personal-index.html
+++ b/pc/online-web/src/main/webapp/web/html/personal-center/personal-index.html
@@ -816,14 +816,20 @@
 									<div class="main-news">
 										<button type="button">全部标记为已读</button>
 										<ul>
-											<li><span class="icon-tip"></span>恭喜您成功报名课程<a href="">小宝中医带你快速入门学针灸（一）</a></li>
-											<li></li>
-											<li></li>
-											<li></li>
+											<li>
+												<span class="icon-tip"></span>
+												恭喜您成功报名课程
+												<a href="">小宝中医带你快速入门学针灸（一）</a>
+												<span class="news-time">2018-02-28 15:00</span>
+											</li>
+											<li class="read-news">
+												张三丰老师叫你去上课了，《太极拳的精华》还有10分钟就要开始了~
+												<a href="">小宝中医带你快速入门学针灸（2）</a>
+												<span class="news-time">2018-02-28 15:00</span>
+											</li>	
 										</ul>
 									</div>
-								</div>
-								
+								</div>	
 							</div>
 							<div class="content hide" >
 								<div>内容7-1</div>
