--- a/pc/online-web/src/main/webapp/web/html/personal-center/center-course.html
+++ b/pc/online-web/src/main/webapp/web/html/personal-center/center-course.html
@@ -14,13 +14,14 @@
 		<link rel="stylesheet" href="/web/css/mylogin.css" />
 		<link href="/web/css/bootstrap.min.css" rel="stylesheet">
 
-		<link rel="stylesheet" href="/web/css/personal-center/center-album.css">
+		<link rel="stylesheet" href="/web/css/personal-center/center-course.css">
 	</head>
 
 	<body>
 		<div class="wp">
 			<div class="wrap-buy">
 				<div class="left-cover z">
+					<span class="course-type">直播中</span>
 					<img src="../../images/banner-wrap.jpg" />
 				</div>
 				<div class="right-details y">
@@ -43,14 +44,19 @@
 							<span>格</span>
 						</div>
 						<p><span>200</span>熊猫币</p>
-						<ul>
-							<li>更新时间</li>
-							<li>共16集，已更新13集（每周三、周五更新）</li>
+						<ul class="coruse-time">
+							<li>上课时间</li>
+							<li>2018.02.12 12:00</li>
+						</ul>
+						<ul class="coruse-address hide">
+							<li>上课地址</li>
+							<li>北京市朝阳区安定门外大街100号</li>
 						</ul>
 
 					</div>
 					<button type="button" class="immediately-buy">立即购买</button>
-					<span class="continueTip">上次播放位置：标幽赋的前世今生详解 </span>
+					<button type="button" class="continue-study gray">暂未开通</button>
+					
 				</div>
 			</div>
 
@@ -62,7 +68,6 @@
 						<ul>
 							<!--未购买-->
 
-							<li class="active-footer">选集</li>
 							<li>详情</li>
 
 							<!--已购买-->
@@ -100,43 +105,9 @@
 						</div>
 					</div>-->
 
-					<!--选集-->
-
-					<div class="sidebar-content">
-						<ul class="album_list">
-							<li>
-								<a href="javascript:;" data-id="669" target="_bland">
-									<span class="playTip"></span>
-									<div class="collection_course_inf">
-										<span style="font-size:14px;color:#666">5.8视频3</span>
-										<span style="font-size:12px;color:#999;margin-top:9px"><em class="class_search_time"></em>32分钟</span>
-									</div>
-								</a>
-							</li>
-							<li>
-								<a href="javascript:;" data-id="669" target="_bland">
-									<span class="playTip"></span>
-									<div class="collection_course_inf">
-										<span style="font-size:14px;color:#666">5.8视频3</span>
-										<span style="font-size:12px;color:#999;margin-top:9px"><em class="class_search_time"></em>32分钟</span>
-									</div>
-								</a>
-							</li>
-							<li>
-								<a href="javascript:;" data-id="669" target="_bland">
-									<span class="playTip"></span>
-									<div class="collection_course_inf">
-										<span style="font-size:14px;color:#666">5.8视频3</span>
-										<span style="font-size:12px;color:#999;margin-top:9px"><em class="class_search_time"></em>32分钟</span>
-									</div>
-								</a>
-							</li>
-
-						</ul>
-					</div>
-
+		
 					<!--详情-->
-					<div class="sidebar-content hide">
+					<div class="sidebar-content">
 						<div class="author-introduce">
 							主讲人
 						</div>
