--- a/pc/online-web/src/main/webapp/web/html/personal-center/personal-index.html
+++ b/pc/online-web/src/main/webapp/web/html/personal-center/personal-index.html
@@ -11,9 +11,6 @@
 		<meta name="renderer" content="webkit">
 		<meta name="baidu-site-verification" content="UHaAQAeAQF" />
 		<!--头部/底部样式-->
-
-	
-		
 		<link rel="stylesheet" href="/web/html/personal-center/center-header/header.css" />
 		<link rel="stylesheet" href="/web/css/footer.css" />
 		<!--两种字体图标-->
@@ -832,7 +829,24 @@
 								</div>	
 							</div>
 							<div class="content hide" >
-								<div>内容7-1</div>
+								<div class="feedback-wrap">
+									<p class="mune-opinion">意见反馈</p>
+									<div class="opinion-title">
+										<label>
+											<span>*</span>
+											标题
+											<input type="text" placeholder="5~50字之间" />
+										</label>
+									</div>
+									<div class="opinion-title" style="padding-top: 0;">
+										<label>
+											<span style="color: white;">*</span>
+											描述
+											<textarea name="" rows="" cols="" placeholder="1000以内" maxlength="1000"></textarea>
+										</label>
+									</div>
+									<button type="button">提交</button>
+								</div>
 								<!--<div class="hide">内容4-2</div>-->
 							</div>
 						</div>
