添加小星星

--- a/pc/online-web/src/main/webapp/web/html/school/details-under.html
+++ b/pc/online-web/src/main/webapp/web/html/school/details-under.html
@@ -36,7 +36,7 @@
 							<span>主讲人：可乐</span>
 						</li>
 						<li class="grade">
-							<img src="../../images/star.png"/>
+							<img src="../../images/icon-start3.png"/>
 						</li>
 						<li>
 							<span>200条评论</span>
