--- a/pc/online-web/src/main/webapp/web/html/school/details-live.html
+++ b/pc/online-web/src/main/webapp/web/html/school/details-live.html
@@ -37,7 +37,7 @@
 							<span>主讲人：可乐</span>
 						</li>
 						<li class="grade">
-							<img src="../../images/star.png"/>
+							<img src="../../images/icon-start5.png"/>
 						</li>
 						<li>
 							<span>200条评论</span>
