师承页面--链接跳转

--- a/wechat/src/main/webapp/xcview/html/apprentice/apprentice.html
+++ b/wechat/src/main/webapp/xcview/html/apprentice/apprentice.html
@@ -7,10 +7,10 @@
 	<meta name="keywords" content="" />
 	<meta name="description" content="" />
 	<!-- 页面css引入 -->
-	<link rel="stylesheet" href="../css/apprentice/apprentice.css">
+	<link rel="stylesheet" href="/xcview/css/apprentice/apprentice.css">
 
 	<!--手机嵌入模板-->
-	<script type="text/javascript" src="../js/layout.js"></script>
+	<script type="text/javascript" src="/xcview/js/common/layout.js"></script>
 </head>
 <body>
 	<!-- 师承头部开始 -->
@@ -24,18 +24,18 @@
 	<div class="main">
 		<div class="center">
 			<ul>
-				<li>
+				<li onclick="location.href ='inherited_introduction.html'">
 					<div class="apprentice_main">
 						<div class="flat_patternmaking">
-							<img src="images/9ed0246c806c9c8d.jpg" alt="" />
+							<img src="/xcview/images/9ed0246c806c9c8d.jpg" alt="" />
 						</div>
 						<div class="main_title">我是标题我是标题我是标题我是标题我是标题我是标题我是标题我是标题我是标题我是标题</div>
 					</div>
 				</li>
-				<li>
+				<li onclick="location.href ='inherited_introduction.html'">
 					<div class="apprentice_main">
 						<div class="flat_patternmaking">
-							<img src="images/9ed0246c806c9c8d.jpg" alt="" />
+							<img src="/xcview/images/9ed0246c806c9c8d.jpg" alt="" />
 						</div>
 						<div class="main_title">我是标题我是标题我是标题我是标题我是标题我是标题我是标题我是标题我是标题我是标题</div>
 					</div>
