--- a/wechat/src/main/webapp/xcview/html/apprentice/inherited_introduction.html
+++ b/wechat/src/main/webapp/xcview/html/apprentice/inherited_introduction.html
@@ -8,21 +8,21 @@
 	<meta name="keywords" content="" />
 	<meta name="description" content="" />
 	<!-- 页面css引入 -->
-	<link rel="stylesheet" href="../css/apprentice/inherited_introduction.css">
+	<link rel="stylesheet" href="/xcview/css/apprentice/inherited_introduction.css">
 
 	<!--手机嵌入模板-->
-<script type="text/javascript" src="../js/layout.js"></script>
+	<script type="text/javascript" src="/xcview/js/common/layout.js"></script>
 </head>
 <body>
 	<!-- 简介头部开始 -->
 	<header>
 		<div class="intro">
-			<div class="intro_top">
-				<img src="http://test-wx.xczhihui.com/xcview/images/anchorj.png" alt="" />
+			<div class="intro_top" onclick="javascript:history.go(-1);">
+				<img src="/xcview/images/anchorj.png" alt="" />
 			</div>
 			<div class="invitation_card">
-				<div class="invitation_card_share"><img src="http://test-wx.xczhihui.com/xcview/images/anchorf.png" alt=""></div>
-				<div class="invitation_card_size">我的邀请卡</div>
+				<div class="invitation_card_share"><img src="/xcview/images/anchorf.png" alt=""></div>
+				<div class="invitation_card_size" onclick="location.href ='invitation_card.html'">我的邀请卡</div>
 			</div>
 		</div>
 	</header>
@@ -159,14 +159,14 @@
 				<p class="title">招生简章</p>
 				<div class="both"></div>
 			</div>
-			<div class="general_center">更多详细内容请查看招生简章全文 > </div>
+			<div class="general_center" onclick="location.href ='recruit.html'">更多详细内容请查看招生简章全文 > </div>
 			<a href="" class="download">下载招生简章</a>
 		</div>
 		<div class="general_border"></div>
 		<!-- 招生简章结束 -->
 
-		<div class="apply">我也要报名</div>
-		<div class="applys" style="display: none;">已报名，查看报名信息</div>
+		<div class="apply" onclick="location.href ='apply.html'">我也要报名</div>
+		<div class="applys" style="display: none;" onclick="location.href ='information_registration.html'">已报名，查看报名信息</div>
 
 
 	</div>    
