--- a/wechat/src/main/webapp/xcview/html/apprentice/recruit.html
+++ b/wechat/src/main/webapp/xcview/html/apprentice/recruit.html
@@ -7,16 +7,16 @@
 	<meta name="keywords" content="" />
 	<meta name="description" content="" />
 	<!-- 页面css引入 -->
-	<link rel="stylesheet" href="../css/apprentice/recruit.css">
+	<link rel="stylesheet" href="/xcview/css/apprentice/recruit.css">
 
 	<!--手机嵌入模板-->
-	<script type="text/javascript" src="../js/layout.js"></script>
+	<script type="text/javascript" src="/xcview/js/common/layout.js"></script>
 </head>
 <body>
 	<!-- 报名头部开始 -->
 	<header>
 		<div class="header">
-			<div class="return"><img src="http://test-wx.xczhihui.com/xcview/images/back%20icon.png" alt="" /></div>
+			<div class="return" onclick="javascript:history.go(-1);"><img src="/xcview/images/back icon.png" alt="" /></div>
 			<div class="apply_title">招徒简章全文</div>
 		</div>
 		
