--- a/wechat/src/main/webapp/xcview/html/apprentice/apply.html
+++ b/wechat/src/main/webapp/xcview/html/apprentice/apply.html
@@ -7,16 +7,16 @@
 	<meta name="keywords" content="" />
 	<meta name="description" content="" />
 	<!-- 页面css引入 -->
-	<link rel="stylesheet" href="../css/apprentice/apply.css">
+	<link rel="stylesheet" href="/xcview/css/apprentice/apply.css">
 
 	<!--手机嵌入模板-->
-	<script type="text/javascript" src="../js/layout.js"></script>
+	<script type="text/javascript" src="/xcview/js/common/layout.js"></script>
 </head>
 <body>
 	<!-- 报名头部开始 -->
 	<header>
 		<div class="header">
-			<div class="return"><img src="http://test-wx.xczhihui.com/xcview/images/back%20icon.png" alt="" /></div>
+			<div class="return" onclick="javascript:history.go(-1);"><img src="http://test-wx.xczhihui.com/xcview/images/back%20icon.png" alt="" /></div>
 			<div class="apply_title">发现</div>
 		</div>
 		
@@ -80,7 +80,7 @@
 			</div>
 			<div class="both"></div>
 		</div>
-		<div class="buttom opacity">提交报名申请</div>
+		<div class="buttom opacity" onclick="location.href ='information_registration.html'">提交报名申请</div>
 		<div class="both"></div>
 	</div>
 	
