--- a/wechat/src/main/webapp/xcview/html/apprentice/invitation_card.html
+++ b/wechat/src/main/webapp/xcview/html/apprentice/invitation_card.html
@@ -7,16 +7,16 @@
 	<meta name="keywords" content="" />
 	<meta name="description" content="" />
 	<!-- 页面css引入 -->
-	<link rel="stylesheet" href="../css/apprentice/invitation_card.css">
+	<link rel="stylesheet" href="/xcview/css/apprentice/invitation_card.css">
 
 	<!--手机嵌入模板-->
-	<script type="text/javascript" src="../js/layout.js"></script>
+	<script type="text/javascript" src="/xcview/js/common/layout.js"></script>
 </head>
 <body>
 	<!-- 报名头部开始 -->
 	<header>
 		<div class="header">
-			<div class="return"><img src="http://test-wx.xczhihui.com/xcview/images/back%20icon.png" alt="" /></div>
+			<div class="return" onclick="javascript:history.go(-1);"><img src="/xcview/images/back icon.png" alt="" /></div>
 			<div class="apply_title">邀请卡</div>
 		</div>
 		
@@ -26,7 +26,7 @@
 	<!-- 中间内容开始 -->
 	<div class="fiexd"></div>
 	<div class="main">
-		<img src="images/1526991186(1).png" alt="" class="main_img" />
+		<img src="/xcview/images/1526991186(1).png" alt="" class="main_img" />
 		<div class="main_size">长按上图保存图片</div>
 	</div>
 	
