专辑播放文档切换隐藏

--- a/pc/online-web/src/main/webapp/web/html/liveVideoAlbum.html
+++ b/pc/online-web/src/main/webapp/web/html/liveVideoAlbum.html
@@ -117,10 +117,10 @@
 		<div class="livePlayer" style="position: relative;padding-right: 0px;">
 
 			<!--动画代码视频文档小框--右侧-->
-			<div class="animation">
+			<!--<div class="animation">
 				<div class="animation-cut animation-cut-click"></div>
 				<div class="animation-shrink" style="display: none;"></div>
-			</div>
+			</div>-->
 
 			<!--弹幕得div-->
 			<div id='boxDom' style="background-color: transparent; 
