之前--底部添加学习跳转页-修改地址和图片地址。邀请卡页天机点击分享事件

--- a/wechat/src/main/webapp/xcview/html/apprentice/inherited_introduction.html
+++ b/wechat/src/main/webapp/xcview/html/apprentice/inherited_introduction.html
@@ -20,9 +20,9 @@
 			<div class="intro_top" onclick="javascript:history.go(-1);">
 				<img src="/xcview/images/anchorj.png" alt="" />
 			</div>
-			<div class="invitation_card">
+			<div class="invitation_card" onclick="location.href ='invitation_card.html'">
 				<div class="invitation_card_share"><img src="/xcview/images/anchorf.png" alt=""></div>
-				<div class="invitation_card_size" onclick="location.href ='invitation_card.html'">我的邀请卡</div>
+				<div class="invitation_card_size">我的邀请卡</div>
 			</div>
 		</div>
 	</header>
