--- a/wechat/src/main/webapp/xcview/html/home_page.html
+++ b/wechat/src/main/webapp/xcview/html/home_page.html
@@ -502,7 +502,7 @@ onclick="common_jump_school({{item.watchState}},{{item.type}},{{item.collection?
 				<p>学习</p>
 			</li>
 			<li>
-				<a href="/xcview/html/discovery.html" class="footer_three" style="background-size: 0.42rem 0.42rem;height: 0.42rem;margin-bottom: 0.04rem;"></a>
+				<a href="/xcview/html/apprentice/apprentice.html" class="footer_three" style="background-size: 0.42rem 0.42rem;height: 0.42rem;margin-bottom: 0.04rem;"></a>
 				<p>发现</p>
 			</li>
 			<li>
