--- a/wechat/src/main/webapp/xcview/html/apprentice/apprentice.html
+++ b/wechat/src/main/webapp/xcview/html/apprentice/apprentice.html
@@ -44,5 +44,29 @@
 		</div>
 	</div>
 	<!-- 中间内容结束 -->
+
+	<!-- 底部开始 -->
+	<div class="footer_perch"></div>
+	<div class="footer">
+		<ul>
+			<li>
+				<a href="/xcview/html/home_page.html" class="footer_one"></a>
+				<p>学堂</p>
+			</li>
+			<li>
+				<a href="javascript:;" class="footer_two" onclick="go_study()"></a>
+				<p>学习</p>
+			</li>
+			<li>
+				<a href="/xcview/html/discovery.html" class="footer_three" style="height: 0.42rem;margin-top: 0.13rem; margin-bottom: 0.07rem;background: url(/xcview/images/discovery_threes.png) no-repeat center;background-size: 0.42rem 0.42rem;margin-bottom: 0.04rem;"></a>
+				<p style="color: #00BC12;">发现</p>
+			</li>
+			<li>
+				<a href="/xcview/html/my_homepage.html" class="footer_four"></a>
+				<p>我的</p>
+			</li>
+		</ul>
+	</div>
+	<!--底部结束-->
 </body>
 </html>
