--- a/wechat/src/main/webapp/xcview/html/my_homepage.html
+++ b/wechat/src/main/webapp/xcview/html/my_homepage.html
@@ -162,7 +162,7 @@
 				<p>学习</p>
 			</li>
 			<li>
-				<a href="discovery.html" class="footer_three" style="height: 0.42rem;margin-top: 0.13rem;background: url(../images/discovery_three.png) no-repeat center;background-size: 0.42rem 0.42rem;margin-bottom: 0.04rem;"></a>
+				<a href="/xcview/html/apprentice/apprentice.html" class="footer_three" style="height: 0.42rem;margin-top: 0.13rem;background: url(../images/discovery_three.png) no-repeat center;background-size: 0.42rem 0.42rem;margin-bottom: 0.04rem;"></a>
 				<p>发现</p>
 			</li>
 			<li>
