修改--报名页信息--img。

--- a/wechat/src/main/webapp/xcview/html/apprentice/inherited_introduction.html
+++ b/wechat/src/main/webapp/xcview/html/apprentice/inherited_introduction.html
@@ -17,6 +17,9 @@
 	<!-- 简介头部开始 -->
 	<header>
 		<div class="intro">
+			<div class="special_img">
+				<img src="/xcview/images/anchorbg.png" alt="" /> <!-- 此图是从上一页专题图的封面图 -->
+			</div>
 			<div class="intro_top" onclick="javascript:history.go(-1);">
 				<img src="/xcview/images/anchorj.png" alt="" />
 			</div>
