增加性别页

--- a/wechat/src/main/webapp/xcview/html/apprentice/apply.html
+++ b/wechat/src/main/webapp/xcview/html/apprentice/apply.html
@@ -37,7 +37,7 @@
 				<input type="text" placeholder="请输入" />
 				<div class="both"></div>
 			</div>
-			<div class="sex">
+			<div class="sex" onclick="location.href ='gender.html'">
 				性别
 
 				<div class="sex_hide">
@@ -83,7 +83,12 @@
 		<div class="buttom opacity" onclick="location.href ='information_registration.html'">提交报名申请</div>
 		<div class="both"></div>
 	</div>
-	
 	<!-- 中间内容结束 -->
 </body>
+<script type="text/javascript" src="/xcview/js/common/jquery-2.1.1.min.js"></script>
+<script type="text/javascript">
+	window.onload = function(){
+
+	};
+</script>
 </html>
