修改--主播页无课程判断默认图线显示。课程评价--Nan错误提示评价数

--- a/wechat/src/main/webapp/xcview/html/live_class.html
+++ b/wechat/src/main/webapp/xcview/html/live_class.html
@@ -75,7 +75,7 @@
 						<img src="../images/xing5.png"/>
 					
 						{{/if}}
-						<a href="javascript:;"><span id="criticizeCountId">共{{criticizeCount}}</span>条评价</a>
+						<a href="javascript:;">共<span id="criticizeCountId">{{criticizeCount}}</span>条评价</a>
 					</li>
 				</ul>
 			</div>
