完善课程详情页面静态化

--- a/pc/online-web/src/main/webapp/web/html/school/details-under.html
+++ b/pc/online-web/src/main/webapp/web/html/school/details-under.html
@@ -275,11 +275,11 @@
 			<h4>我要评价</h4>
 				<div class="impression-comment impression-star cl">
 					<p>总体印象</p>
-					<img src="../../images/star-dim.png">
-					<img src="../../images/star-dim.png">
-					<img src="../../images/star-dim.png">
-					<img src="../../images/star-dim.png">
-					<img src="../../images/star-dim.png">
+					<img src="../../web/images/star-dim.png">
+					<img src="../../web/images/star-dim.png">
+					<img src="../../web/images/star-dim.png">
+					<img src="../../web/images/star-dim.png">
+					<img src="../../web/images/star-dim.png">
 					<span></span>
 				</div>
 				<div class="impression-comment impression-face cl">
