--- a/pc/online-web/src/main/webapp/web/html/school/details-album.html
+++ b/pc/online-web/src/main/webapp/web/html/school/details-album.html
@@ -140,6 +140,7 @@
 			
 		<!--评价-->			
 					<div class="sidebar-content hide">
+					
 						<div class="impression-content">
 							<ul class="impression-list">
 								<li>
@@ -315,11 +316,11 @@
 			<h4>我要评价</h4>
 				<div class="impression-comment impression-star cl">
 					<p>总体印象</p>
-					<img src="../../images/star-dim.png">
-					<img src="../../images/star-dim.png">
-					<img src="../../images/star-dim.png">
-					<img src="../../images/star-dim.png">
-					<img src="../../images/star-dim.png">
+					<img src="../../web/images/star-dim.png">
+					<img src="../../web/images/star-dim.png">
+					<img src="../../web/images/star-dim.png">
+					<img src="../../web/images/star-dim.png">
+					<img src="../../web/images/star-dim.png">
 					<span></span>
 				</div>
 				<div class="impression-comment impression-face cl">
