添加个人中心优化

--- a/pc/online-web/src/main/webapp/web/html/personal-center/personal-index.html
+++ b/pc/online-web/src/main/webapp/web/html/personal-center/personal-index.html
@@ -382,8 +382,9 @@
 													<p>不懂就要问</p>
 												</div>
 												<p class="list-Answer-right-text dot5" >
-														遇到稍稍遇到稍遇到稍遇到遇到稍微变化血管扩张，密集的问问遇到稍微变化血管扩张，密
-														遇到稍稍遇到稍遇到稍遇到微变化血管扩张，密集的问问集的问问遇到稍微变化血管扩张，密集的问问遇到稍微变化血管扩张，密集的问问微变化血管扩张，密集的问问
+														遇到稍稍遇到稍遇到稍遇到遇到稍微变化血管扩张，密集的问问到稍微变化
+														血管扩张，密集的问问微
+														
 												</p>
 												<div class="show-img">
 													<ul>
