直播间测试修改

--- a/wechat/src/main/webapp/xcview/html/details.html
+++ b/wechat/src/main/webapp/xcview/html/details.html
@@ -113,7 +113,8 @@ $(function(){
 	
 	/*隐藏滚动条*/
 	#mCSB_1_scrollbar_vertical{
-		opacity1: 0;
+		opacity: 1;
+		display: block !important;
 	}
 	
 	
