删减代码-专辑

--- a/pc/online-web/src/main/webapp/web/html/school/details-album.html
+++ b/pc/online-web/src/main/webapp/web/html/school/details-album.html
@@ -37,7 +37,7 @@
 							<span>主讲人：可乐</span>
 						</li>
 						<li class="grade">
-							<img src="../../images/icon-start2.png" />
+							<img src="../../images/icon-start2_0.png" />
 						</li>
 						<li>
 							<span>200条评论</span>
@@ -87,7 +87,7 @@
 												<div class="percent left"></div>
 												<div class="percent right wth0"></div>
 											</div>
-											<div class="num"><span>0</span>%</div>
+											<!--<div class="num"><span>0</span>%</div>-->
 
 
 										<img src="../../images/icon-play.png" />
@@ -103,8 +103,8 @@
 										<div class="circle">
 												<div class="percent left"></div>
 												<div class="percent right wth0"></div>
-											</div>
-											<div class="num"><span>0</span>%</div>
+										</div>
+											<!--<div class="num"><span>0</span>%</div>-->
 										<img src="../../images/icon-play.png" />
 									</div>
 									<div class="play-album z">
