--- a/wechat/src/main/webapp/xcview/html/details.html
+++ b/wechat/src/main/webapp/xcview/html/details.html
@@ -48,6 +48,21 @@ $(function(){
 #chatmsg{
 	padding-top: 0.4rem;
 }
+.cover{
+	display: none !important;
+}
+.coze_bottom{
+	display: none !important;
+}
+.coze_center{
+	background: indianred;
+}
+.mCustomScrollBox{
+	background: mediumvioletred;
+}
+.details_cen1{
+	display: none;
+}
 </style>
 
 <script>
@@ -163,7 +178,7 @@ $(function(){
 }
 .coze_cen_ris{
 	margin-bottom: 0rem !important;
-}
+} 
 </style>
 </head>
 <body style="background: #f8f8f8;overflow: hidden1;">
@@ -621,6 +636,14 @@ $(function(){
 
 <script type="text/javascript">
 	window.onload = function(){
+
+		$("body").scrollTop($("body").scrollHeight);
+		$(".chatmsg-box").scrollTop($(".chatmsg-box")[0].scrollHeight);
+		$(".mCSB_dragger").scrollTop($(".mCSB_dragger")[0].scrollHeight);
+		$(".coze").scrollTop($(".coze")[0].scrollHeight);
+
+
+
 //		点击输入框,表情显示,礼物隐藏   删除后，影响效果
 		$("#mywords").click(function(){
 			$(".give_a1").hide();  /*这是礼物*/
@@ -628,10 +651,7 @@ $(function(){
 			$("#sendChat").show();  /*发送文字按钮*/
 			$(".div_input").css("background","none");  /*input背景色隐藏*/
 		});
-		
 
-		
-		
 		$(".gift_ul_li li:first-child").click();
 		
 		
