--- a/pc/online-web/src/main/webapp/web/html/personal-center/personal-index.html
+++ b/pc/online-web/src/main/webapp/web/html/personal-center/personal-index.html
@@ -815,7 +815,7 @@
 												用户名
 											</div>
 											<input type="" name="" id="" value="" />	
-											<span class="warning-name">用户名格式不能为空 !</span>
+											<span class="warning-name hide">用户名格式不能为空 !</span>
 										</div>
 										
 										<div class="data-mune">
