静态化医师页面

--- a/pc/online-web/src/main/webapp/web/html/want-anchor.html
+++ b/pc/online-web/src/main/webapp/web/html/want-anchor.html
@@ -35,7 +35,7 @@
 			</div>
 			<h5>医师认证</h5>
 			<p>适合于拥有医师资格证的中医师</p>
-			<a href="">立即认证</a>
+			<a href="javascript:;" class="toDocJoin_ys">立即认证</a>
 		</div>
 		<div class="line-division">
 			
@@ -46,7 +46,7 @@
 			</div>
 			<h5>医馆认证</h5>
 			<p>适合于拥有能讲中医师的医馆</p>
-			<a href="">立即认证</a>
+			<a href="javascript:;"  class="toDocJoin_yg">立即认证</a>
 		</div>
 	</div>
 	<!--平台优势-->
@@ -78,18 +78,19 @@
 			<p>及时结算所得</p>
 		</div>
 	</div>
-	
-
-
-
-
-
 <script src="/web/js/jquery-1.12.1.js" type="text/javascript" charset="utf-8"></script>
 <script type="text/javascript" src="/web/js/artTemplate.js"></script>
 <script src="/web/js/bootstrap.js" type="text/javascript" charset="utf-8"></script>
 <script src="/web/js/ajax.js" type="text/javascript" charset="utf-8"></script>
 <script src="/web/js/header.js?v=ipandatcm_1.3" type="text/javascript" charset="utf-8"></script>
 <script type="text/javascript" src="/web/js/footer.js?v=ipandatcm_1.3"></script>
+
+<script type="text/javascript" src="/web/js/want-anchor.js?v=ipandatcm_1.3"></script>
+
+<script type="text/javascript">
+</script>
+
+
 
 </body>
 </html>
