--- a/pc/online-web/src/main/webapp/web/html/myStudyCenter.html
+++ b/pc/online-web/src/main/webapp/web/html/myStudyCenter.html
@@ -487,6 +487,7 @@
 <script src="/web/js/jquery.pagination.js"></script>
 <script src="/web/js/myanswer.js" type="text/javascript" charset="utf-8"></script>
 <script src="/web/js/modal.js" type="text/javascript" charset="utf-8"></script>
+<script src="/web/js/common_msg.js" type="text/javascript" charset="utf-8"></script>
 <script src="/web/js/myStudentCenter.js?v=ipandatcm_1.3" type="text/javascript" charset="utf-8"></script>
 
 
