完善主播、课程评论

--- a/pc/online-web/src/main/webapp/web/html/liveVideo.html
+++ b/pc/online-web/src/main/webapp/web/html/liveVideo.html
@@ -221,8 +221,9 @@
 			</marquee>
 			<div class="QR_code"></div>
 
-			<span class="liveName"><a href="#" id="return"><img alt=""
-					src="/web/images/video2/fanhui.png"> 返回课程详情</a>&nbsp;&nbsp;<span
+			<span class="liveName">
+			      <a href="" id="return">
+			<img alt="" src="/web/images/video2/fanhui.png"> 返回课程详情</a>&nbsp;&nbsp;<span
 				id="liveStatus"></span><span id="courseName"></span></span>
 			<div class="share">
 				<ul>
