--- a/pc/online-web/src/main/webapp/web/html/ccvideo/liveVideoAlbum.html
+++ b/pc/online-web/src/main/webapp/web/html/ccvideo/liveVideoAlbum.html
@@ -32,9 +32,7 @@
 
 			<!---------提示遮罩层    上面分享的一块区域--------->
 			<div class="liveMess" style="padding-right:0">
-
 				<div class="QR_code"></div>
-
 				<span class="liveName"><a href="#" id="return"><img alt=""
 					src="/web/images/video2/fanhui.png"> 返回课程详情</a>&nbsp;&nbsp;<span
 				id="liveStatus"></span><span id="courseName"></span></span>
@@ -64,16 +62,24 @@
 					</ul>
 				</div>
 			</div>
+			
+			<div class="videoBody">
+				<div class="videoBody-top">
+					<div class="videoBody-video">
+					</div>
+				</div>
+			</div>
+			
 			<!-- right start -->
 			<div class="right">
 					<!--右侧专辑部分代码-->
 			<div class="album_list">
 				<ul>
+					<!-- <li><div><span class="playbtn"></span><span>郝万山</span><span class="album_title">《伤寒论》讲解个头</span> <span class="album_time">40分钟</span></div></li>
 					<li><div><span class="playbtn"></span><span>郝万山</span><span class="album_title">《伤寒论》讲解个头</span> <span class="album_time">40分钟</span></div></li>
 					<li><div><span class="playbtn"></span><span>郝万山</span><span class="album_title">《伤寒论》讲解个头</span> <span class="album_time">40分钟</span></div></li>
 					<li><div><span class="playbtn"></span><span>郝万山</span><span class="album_title">《伤寒论》讲解个头</span> <span class="album_time">40分钟</span></div></li>
-					<li><div><span class="playbtn"></span><span>郝万山</span><span class="album_title">《伤寒论》讲解个头</span> <span class="album_time">40分钟</span></div></li>
-					<li><div><span class="playbtn"></span><span>郝万山</span><span class="album_title">《伤寒论》讲解个头</span> <span class="album_time">40分钟</span></div></li>
+					<li><div><span class="playbtn"></span><span>郝万山</span><span class="album_title">《伤寒论》讲解个头</span> <span class="album_time">40分钟</span></div></li> -->
 				</ul>
 			</div>
 			</div>
