--- a/wechat/src/main/webapp/home/coursePlay.html
+++ b/wechat/src/main/webapp/home/coursePlay.html
@@ -4,7 +4,7 @@
 	<head>
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0,minimum-scale=1.0,user-scalable=no">
-		<title>Document</title>
+		<title>石教授介绍</title>
 		<link rel="stylesheet" href="reset.css">
 		<link rel="stylesheet" href="coursePlay.css" />
 	</head>
@@ -62,8 +62,8 @@
 		</div>
 		<div class="courcse_inf">
 
-			<img src="images/teacher.png" alt="" />
-			<p>姚春龄，毕业于河北医科大学，从医40余年，曾任北京市广外医院院长，北京市回民医院院长，现任北京同仁堂王府井中医医院特聘医学顾问。师从全国著名老中医，原中国中医院研究院副院长赵金铎。熟练运用中医基础理论和中医病机学说，力倡中西医结合，强调中医整体观念和辨证论治。
+			<img src="images/teacher.jpg" alt="" />
+			<p>石应轩，北京中医药大学特聘教授，北京华大研修学院光明中医养生学院教授，中华中医药学会会员，全国华佗神针灸研究会副会长，中原经方实战联盟首届理事会主席，北京市、河南省中医药学会张仲景学说委员会委员，北京市中医药管理局“薪火传承3+3项目”胡希恕名家研究室骨干成员，北京宫廷医学研究会特约研究员，中国河洛易经学院易医学教授，河南省温县赵堡太极拳第十三代传人世界，石氏宗亲会副会长。
 			</p>
 		</div>
 
