--- a/wechat/src/main/webapp/home/index.html
+++ b/wechat/src/main/webapp/home/index.html
@@ -1,10 +1,10 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 
 	<head>
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0,minimum-scale=1.0,user-scalable=no">
-		<title>Document</title>
+		<title>石教授介绍</title>
 		<link rel="stylesheet" href="reset.css">
 		<link rel="stylesheet" href="index.css">
 	</head>
@@ -17,7 +17,7 @@
 		<!-- 头部个人信息部分 -->
 		<div class="header">
 			<div class="user_inf">
-				<img src="images/1.jpg" class="user_pic" alt="">
+				<img src="images/header_pic.png" class="user_pic" alt="">
 				<div class="user_int">
 					<span class="user_name">石应轩</span>
 					<span class="user_sign">北京中医药大学特聘教授</span>
@@ -59,9 +59,9 @@
 					<p class="courcse_title">2018.5.6 石应轩收徒仪式</p>
 
 					<div class="price_watch_time">
-						<span class="price">￥99</span>
+						<span class="price">免费</span>
 						<div class="watch_time">
-							<span class="watch"><em class="watch_pic"></em> 192</span>
+							<span class="watch"><em class="watch_pic"></em> 12</span>
 							<span class="time"><em class="time_pic"></em>01:11</span>
 						</div>
 					</div>
@@ -75,7 +75,7 @@
 					<div class="price_watch_time">
 						<span class="price">免费</span>
 						<div class="watch_time">
-							<span class="watch"><em class="watch_pic"></em> 192</span>
+							<span class="watch"><em class="watch_pic"></em> 33</span>
 							<span class="time"><em class="time_pic"></em>01:25</span>
 						</div>
 					</div>
@@ -91,9 +91,9 @@
 					<img class="courcse_pic" src="images/333.jpg" alt="" />
 					<p class="courcse_title">石应轩谈辨证施治</p>
 					<div class="price_watch_time">
-						<span class="price">￥50</span>
+						<span class="price">免费</span>
 						<div class="watch_time">
-							<span class="watch"><em class="watch_pic"></em> 192</span>
+							<span class="watch"><em class="watch_pic"></em> 64</span>
 							<span class="time"><em class="time_pic"></em>00:55</span>
 						</div>
 					</div>
@@ -107,7 +107,7 @@
 					<div class="price_watch_time">
 						<span class="price">免费</span>
 						<div class="watch_time">
-							<span class="watch"><em class="watch_pic"></em> 192</span>
+							<span class="watch"><em class="watch_pic"></em> 44</span>
 							<span class="time"><em class="time_pic"></em>02:15</span>
 						</div>
 					</div>
