--- a/wechat/src/main/webapp/home/courseList.html
+++ b/wechat/src/main/webapp/home/courseList.html
@@ -4,7 +4,7 @@
 	<head>
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0,minimum-scale=1.0,user-scalable=no">
-		<title>Document</title>
+		<title>石教授介绍</title>
 		<link rel="stylesheet" href="reset.css">
 		<link rel="stylesheet" href="index.css" />
 
@@ -25,9 +25,9 @@
 				<img class="courcse_pic" src="images/111.jpg" alt="" />
 				<p class="courcse_title">2018.5.6 石应轩收徒仪式</p>
 				<div class="price_watch_time">
-					<span class="price">￥99</span>
+					<span class="price">免费</span>
 					<div class="watch_time">
-						<span class="watch"><em class="watch_pic"></em> 192</span>
+						<span class="watch"><em class="watch_pic"></em> 12</span>
 						<span class="time"><em class="time_pic"></em>01:11</span>
 					</div>
 				</div>
@@ -41,7 +41,7 @@
 				<div class="price_watch_time">
 					<span class="price">免费</span>
 					<div class="watch_time">
-						<span class="watch"><em class="watch_pic"></em> 192</span>
+						<span class="watch"><em class="watch_pic"></em> 33</span>
 						<span class="time"><em class="time_pic"></em>01:25</span>
 					</div>
 				</div>
@@ -56,9 +56,9 @@
 				<img class="courcse_pic" src="images/333.jpg" alt="" />
 				<p class="courcse_title">石应轩谈辨证施治</p>
 				<div class="price_watch_time">
-					<span class="price">￥50</span>
+					<span class="price">免费</span>
 					<div class="watch_time">
-						<span class="watch"><em class="watch_pic"></em> 192</span>
+						<span class="watch"><em class="watch_pic"></em> 44</span>
 						<span class="time"><em class="time_pic"></em>00:55</span>
 					</div>
 				</div>
@@ -72,7 +72,7 @@
 				<div class="price_watch_time">
 					<span class="price">免费</span>
 					<div class="watch_time">
-						<span class="watch"><em class="watch_pic"></em> 192</span>
+						<span class="watch"><em class="watch_pic"></em> 64</span>
 						<span class="time"><em class="time_pic"></em>02:15</span>
 					</div>
 				</div>
@@ -86,9 +86,9 @@
 				<img class="courcse_pic" src="images/555.jpg" alt="" />
 				<p class="courcse_title">石应轩谈恩师</p>
 				<div class="price_watch_time">
-					<span class="price">￥99</span>
+					<span class="price">免费</span>
 					<div class="watch_time">
-						<span class="watch"><em class="watch_pic"></em> 192</span>
+						<span class="watch"><em class="watch_pic"></em> 88</span>
 						<span class="time"><em class="time_pic"></em>01:51</span>
 					</div>
 				</div>
@@ -102,7 +102,7 @@
 				<div class="price_watch_time">
 					<span class="price">免费</span>
 					<div class="watch_time">
-						<span class="watch"><em class="watch_pic"></em> 192</span>
+						<span class="watch"><em class="watch_pic"></em> 99</span>
 						<span class="time"><em class="time_pic"></em>01:06</span>
 					</div>
 				</div>
@@ -118,9 +118,9 @@
 				<img class="courcse_pic" src="images/777.jpg" alt="" />
 				<p class="courcse_title">石应轩谈六经八方</p>
 				<div class="price_watch_time">
-					<span class="price">￥50</span>
+					<span class="price">免费</span>
 					<div class="watch_time">
-						<span class="watch"><em class="watch_pic"></em> 192</span>
+						<span class="watch"><em class="watch_pic"></em> 20</span>
 						<span class="time"><em class="time_pic"></em>01:06</span>
 					</div>
 				</div>
@@ -134,7 +134,7 @@
 				<div class="price_watch_time">
 					<span class="price">免费</span>
 					<div class="watch_time">
-						<span class="watch"><em class="watch_pic"></em> 192</span>
+						<span class="watch"><em class="watch_pic"></em> 15</span>
 						<span class="time"><em class="time_pic"></em>01:29</span>
 					</div>
 				</div>
