修改专辑播放页面的样式

--- a/pc/online-web/src/main/webapp/web/html/ccvideo/liveVideoAlbum.html
+++ b/pc/online-web/src/main/webapp/web/html/ccvideo/liveVideoAlbum.html
@@ -23,7 +23,7 @@
 	<body style="background: #000!important">
 
 		<!--   直播区域    -->
-		<div class="livePlayer" style="position: relative;padding-right: 0px;">
+		<div class="livePlayer" style="position: relative;padding-right: 310px;">
 
 
 			<!--弹幕得div-->
@@ -74,7 +74,7 @@
 			<div class="right">
 					<!--右侧专辑部分代码-->
 			<div class="album_list">
-				<ul>
+				<ul style='padding-bottom:60px'>
 					<!-- <li><div><span class="playbtn"></span><span>郝万山</span><span class="album_title">《伤寒论》讲解个头</span> <span class="album_time">40分钟</span></div></li>
 					<li><div><span class="playbtn"></span><span>郝万山</span><span class="album_title">《伤寒论》讲解个头</span> <span class="album_time">40分钟</span></div></li>
 					<li><div><span class="playbtn"></span><span>郝万山</span><span class="album_title">《伤寒论》讲解个头</span> <span class="album_time">40分钟</span></div></li>
