--- a/online-web/src/main/webapp/web/html/qusAndAnsDetailGuanLi.html
+++ b/online-web/src/main/webapp/web/html/qusAndAnsDetailGuanLi.html
@@ -183,7 +183,7 @@
 								<li data-id="four" data-url="../html/aboutUs.html" class="noline">常见问题</li>
 							</ul>
 						</div>
-						<div class="trademark">琼ICP备17002789号 Copyright @ 2017 熊猫中医 All Rights Reserved<span style="margin-right:5px;"></span></div>
+						<div class="trademark"><a href="http://www.miibeian.gov.cn/" target="_blank" class="ml14" style="color: white;">琼ICP备17002789号-2</a> Copyright @ 2017 熊猫中医 All Rights Reserved<span style="margin-right:5px;"></span></div>
 					</div>
 				</div>
 			</footer>
