增加跳转到支付页面、完善专辑

--- a/pc/online-web/src/main/webapp/web/html/ccvideo/video.html
+++ b/pc/online-web/src/main/webapp/web/html/ccvideo/video.html
@@ -55,7 +55,7 @@
 				</div>
 			</div>
 		</div>
-		<div class="videoBody">
+		<div class="videoBody" style='margin-bottom:0'>
 			<div class="videoBody-top">
 				<div class="videoBody-video">
 				</div>
