--- a/wechat/src/main/webapp/xcview/html/live_personal.html
+++ b/wechat/src/main/webapp/xcview/html/live_personal.html
@@ -67,7 +67,7 @@
 					<p class="personal_name">{{lecturerInfo.name}}</p>
 					<div class="person_follow">
 						<div class="left_personal z">
-							<p>关注&nbsp;{{focusCount}}</p>
+							<p>关注&nbsp;<span>{{focusCount}}</span></p>
 						</div>
 						<div class="separate"></div>			
 						<div class="right_personal y">
