--- a/online-web/src/main/webapp/index.html
+++ b/online-web/src/main/webapp/index.html
@@ -133,7 +133,7 @@
                 <div class="w_yugao_hd">
                     <h2 class="h_tl" style="margin-top:0px;">
                         <img src="web/images/yugao/0802301_03.png" alt="" />
-                        <span href="javascript:void(0);" >直播活动</span>
+                        <span href="javascript:void(0);" >直播活动111</span>
                     </h2>
                     <!-- <a href="javascript: ;" class="w_yugao_hd_a">更多></a> -->
         		</div>
