--- a/online-web/src/main/webapp/web/html/personal-center/personal-index.html
+++ b/online-web/src/main/webapp/web/html/personal-center/personal-index.html
@@ -168,7 +168,7 @@
 									</div>
 									<!--播放历史-->
 									<div class="save-class">
-										<button type="button" class="clear-history">清除记录</button>
+										<button type="button" class="clear-history hide">清除记录</button>
 										<div id="history-template">
 											<script type="text/template" id="content-history">
 												{{each items as item i}}																							
