--- a/online-web/src/main/webapp/web/html/liveVideo.html
+++ b/online-web/src/main/webapp/web/html/liveVideo.html
@@ -34,81 +34,7 @@
 <script src="http://cnstatic01.e.vhall.com/3rdlibs/jquery/1.11.2/jquery.min.js" type="text/javascript"></script>
 <script src="/web/js/common_msg.js" type="text/javascript"></script>
 <script>
-			(function() {
-                if(document.location.host=='www.ipandatcm.com'){
-                    wxurl = "http://m.ipandatcm.com";
-                }else{
-                    wxurl = "http://test-wx.xczhihui.com";
-                }
-			})();
-			//-- shareType 分享类型 1 课程  2 主播
-			var qrcodeurl = wxurl+"/wx_share.html?shareType=1&shareId="+course_id;
-			
-			$(document).ready(function() {
-				$("#qrcodeCanvas1").qrcode({
-					render : "canvas",    //设置渲染方式，有table和canvas，使用canvas方式渲染性能相对来说比较好
-					text : qrcodeurl,    //扫描了二维码后的内容显示,在这里也可以直接填一个网址，扫描二维码后
-					width : "90",               //二维码的宽度
-					height : "90",              //二维码的高度
-					background : "#ffffff",       //二维码的后景色
-					foreground : "#000000",        //二维码的前景色
-					src: '/web/images/yrx.png'             //二维码中间的图片
-				});
-				$("#qrcodeCanvas2").qrcode({
-					render : "canvas",    //设置渲染方式，有table和canvas，使用canvas方式渲染性能相对来说比较好
-					text : qrcodeurl,    //扫描了二维码后的内容显示,在这里也可以直接填一个网址，扫描二维码后
-					width : "90",               //二维码的宽度
-					height : "90",              //二维码的高度
-					background : "#ffffff",       //二维码的后景色
-					foreground : "#000000",        //二维码的前景色
-					src: '/web/images/yrx.png'             //二维码中间的图片
-				});
-			});
-            (function(){
-                //解析url地址
-                var ourl = document.location.search;
-                var apams = ourl.substring(1).split("&");
-                var arr = [];
-                for (i = 0; i < apams.length; i++) {
-                    var apam = apams[i].split("=");
-                    arr[i] = apam[1];
-                    var courserId = arr[0];
-                };
-                var browser={
-                    versions:function(){
-                        var u = navigator.userAgent, app = navigator.appVersion;
-                        return {//移动终端浏览器版本信息
-                            trident: u.indexOf('Trident') > -1, //IE内核
-                            presto: u.indexOf('Presto') > -1, //opera内核
-                            webKit: u.indexOf('AppleWebKit') > -1, //苹果、谷歌内核
-                            gecko: u.indexOf('Gecko') > -1 && u.indexOf('KHTML') == -1, //火狐内核
-                            mobile: !!u.match(/AppleWebKit.*Mobile.*/), //是否为移动终端
-                            ios: !!u.match(/\(i[^;]+;( U;)? CPU.+Mac OS X/), //ios终端
-                            android: u.indexOf('Android') > -1 || u.indexOf('Linux') > -1, //android终端或者uc浏览器
-                            iPhone: u.indexOf('iPhone') > -1 , //是否为iPhone或者QQHD浏览器
-                            iPad: u.indexOf('iPad') > -1, //是否iPad
-                            webApp: u.indexOf('Safari') == -1, //是否web应该程序，没有头部与底部
-                            weixin: u.indexOf('MicroMessenger') > -1, //是否微信
-                            qq: u.match(/\sQQ/i) == " qq" //是否QQ
-                        };
-                    }(),
-                    language:(navigator.browserLanguage || navigator.language).toLowerCase()
-                }
-
-                if(browser.versions.mobile || browser.versions.ios || browser.versions.android ||
-                    browser.versions.iPhone || browser.versions.iPad){
-
-                    if(document.location.host=='www.ipandatcm.com' ||document.location.host=='www.ixincheng.com' || document.location.host=='ipandatcm.com' ||document.location.host=='ixincheng.com'){
-                        wxurl = "http://m.ipandatcm.com/wx_share.html?shareType=1&shareId="+course_id;
-                    }else{
-                        wxurl = "http://test-wx.xczhihui.com/wx_share.html?shareType=1&shareId="+course_id;
-                    }
-                    window.location = wxurl;
-                }else if(document.location.host=='www.ixincheng.com'){
-                    window.location = "http://www.ipandatcm.com/course/courses/"+course_id;
-                }
-            })()
-		</script>
+</script>
 		
 		<script type="text/javascript">
 			window.onload = function(){
@@ -748,8 +674,9 @@
 <!-- <script src="/web/js/dashang.js?v=ipandatcm_1.3" type="text/javascript"
 	charset="utf-8"></script> -->
 <!-- <script src='http://cdn.bootcss.com/jquery/1.9.1/jquery.min.js'></script> -->
-		<script src="/web/js/liveVideo/liveVideo.js?v=ipandatcm_1.3"></script>
-		<script src="/web/js/liveVideo/liveVideoSDK.js?v=ipandatcm_1.3"></script>
+<script src="/web/js/liveVideo/liveVideo.js?v=ipandatcm_1.3"></script>
+<script src="/web/js/liveVideo/liveVideoSDK.js?v=ipandatcm_1.3"></script>
+<script src="/web/js/common/wx-share.js?v=ipandatcm_1.3"></script>
 
 
 <div style="">你好</div>
