完善pc端分享

--- a/online-web/src/main/webapp/web/html/ccvideo/video.html
+++ b/online-web/src/main/webapp/web/html/ccvideo/video.html
@@ -63,6 +63,7 @@
 		</div>
 	</body>
 	<script src="/web/js/ccvideo/video.js?v=ipandatcm_1.3" type="text/javascript" charset="utf-8"></script>
+	<script src="/web/js/common/video_share.js?v=ipandatcm_1.3"></script>
 </html>
 <script src="/web/js/placeHolder.js"></script>
 <script type="text/javascript">
