--- a/online-web/src/main/webapp/web/html/liveVideo.html
+++ b/online-web/src/main/webapp/web/html/liveVideo.html
@@ -676,7 +676,7 @@
 <!-- <script src='http://cdn.bootcss.com/jquery/1.9.1/jquery.min.js'></script> -->
 <script src="/web/js/liveVideo/liveVideo.js?v=ipandatcm_1.3"></script>
 <script src="/web/js/liveVideo/liveVideoSDK.js?v=ipandatcm_1.3"></script>
-<script src="/web/js/common/wx-share.js?v=ipandatcm_1.3"></script>
+<script src="/web/js/common/video_share.js?v=ipandatcm_1.3"></script>
 
 
 <div style="">你好</div>
